# mulle-sprintf

./: .gitignore  .touch  AGENTS.md  CMakeDependencies.txt  CMakeLists.txt  CMakeSourcesAndHeaders.txt  LICENSE  README.md  RELEASENOTES.md  clib.json  mulle-sprintf.sublime-project  package.json
.bootstrap/: embedded_repositories  repositories
.github/workflows/: semgrep.yml
.mulle-env/share/: environment-aux.sh  environment-project.sh  environment-share.sh
.mulle-sde/etc/match.d/: 50-source--private-headers  55-source--public-headers
.mulle-sourcetree/etc/: config
.mulle/etc/env/: environment-global.sh  environment-host-ci-prerelease.sh  environment-host-terodde.sh  environment-host-travis-ci-prerelease.sh  environment-project.sh
.mulle/etc/match/match.d/: 95-source--sources
.mulle/etc/sourcetree/: config
.mulle/etc/todo/: todo.txt
.mulle/share/env/: environment-project.sh
.mulle/share/sourcetree/: config
assets/dox/: TOC.md
cmake/: DependenciesAndLibraries.cmake  Headers.cmake  HeadersAndSources.cmake  _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cmake/reflect/: _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cmake/share/: Environment.cmake  LinkManifestC.cmake  Standalone.cmake  StandaloneC.cmake  StartupC.cmake
cola/: api.md.bud  description.md.bud  example.md.bud  properties.plist  usage.md.bud
dox/: API_SPRINTF.md  BUILD.md
mulle-project/: formula-info.sh
mulle-sprintf.xcodeproj/: project.pbxproj
mulle-sprintf.xcodeproj/xcshareddata/xcschemes/: Libraries.xcscheme
src/: _dependencies.h  _mulle-sprintf-dependencies.h  _mulle-sprintf-include-private.h  _mulle-sprintf-include.h  dependencies.h  include.h  mulle-sprintf-function.c  mulle-sprintf-function.h  mulle-sprintf-standalone.c  mulle-sprintf.c  mulle-sprintf.h  mulle_sprintf.c  mulle_sprintf.h  mulle_sprintf_function.c  mulle_sprintf_function.h  mulle_sprintf_standalone.c  mulle_standalone_sprintf.c  mulle_standalone_sprintf.h
src/functions/: mulle-sprintf-character.c  mulle-sprintf-character.h  mulle-sprintf-decimal.c  mulle-sprintf-decimal.h  mulle-sprintf-escape.c  mulle-sprintf-escape.h  mulle-sprintf-fp.c  mulle-sprintf-fp.h  mulle-sprintf-integer.c  mulle-sprintf-integer.h  mulle-sprintf-pointer.c  mulle-sprintf-pointer.h  mulle-sprintf-return.c  mulle-sprintf-return.h  mulle-sprintf-string.c  mulle-sprintf-string.h  mulle_sprintf_character.c  mulle_sprintf_character.h  mulle_sprintf_decimal.c  mulle_sprintf_decimal.h  mulle_sprintf_escape.c  mulle_sprintf_escape.h  mulle_sprintf_fp.c  mulle_sprintf_fp.h  mulle_sprintf_function.c  mulle_sprintf_function.h  mulle_sprintf_int.c  mulle_sprintf_int.h  mulle_sprintf_integer.c  mulle_sprintf_integer.h  mulle_sprintf_pointer.c  mulle_sprintf_pointer.h  mulle_sprintf_return.c  mulle_sprintf_return.h  mulle_sprintf_string.c  mulle_sprintf_string.h
src/generic/: include-private.h  include.h
src/mulle-dtoa/: mulle-dtoa.c  mulle-dtoa.h
src/reflect/: _mulle-sprintf-include-private.h  _mulle-sprintf-include.h  _mulle-sprintf-versioncheck.h
templates/: README.md.scion
templates/dox/: BUILD.md.scion
test/: coverage.json
test/.mulle-env/share/: environment-project.sh
test/.mulle/etc/env/: environment-host-ci-prerelease.sh  environment-host-terodde.sh
test/.mulle/etc/sourcetree/: config
test/.mulle/share/env/: environment-project.sh
test/.mulle/share/sde/: mulle-test
test/buffer/: snprintf.c  snprintf.stdout  sprintf-do.c  test-mvsprintf.c  test-mvsprintf.stdout
test/example/: example.c  readme1.c  readme2.c
test/extension/: bool.c  bool.stdout
test/float/: dtoa.c  dtoa.stdout  longdouble.c  positional.c  positional.stdout  simple.c  simple.stdout
test/integer/: boolflag.c  boolflag.stdout  char.c  char.stdout  free.c  hash.c  hash.stdout  int.c  int.stdout  length.c  length.stdout  printf_unknown_conversion_char.c.memo  short.c  short.stdout  simple.c  simple.stdout
test/misc/: defaultconversion.c  defaultconversion.stdout  functions.c  modifiers.c
test/none/: simple.c
test/pointer/: voidpointer.c
test/return/: return.c  return.stdout
test/string/: escape.c  escape.stdout  positional.c  snprintf.c  snprintf.stdout  sprintf.c  sprintf.stdout  string-alternate.c  string-alternate.stdout  string-positional.c  string-positional.stdout  string.c  string.stdout  truncate.c  utf16.c  utf16.stdout  utf32.c  utf32.stdout  utf8.c  utf8.stdout
tests/: build-for-test.sh  build-test.sh  run-test.sh
tests/example/: example.c
tests/extension/: bool.c
tests/float/: longdouble.c  longdouble.stdout  simple.c
tests/integer/: free.c  free.stdout  simple.c  simple.stdout
tests/none/: simple.c  simple.stdout
tests/string/: positional.c  positional.stdout  string.c  string.stdout
